add zap.policy